# compcraf

./: Cargo.toml
models/: Cargo.toml
models/src/: lib.rs
src/: main.rs  models.rs
ui/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tree.txt
ui/src/: app.rs  lib.rs  main.rs
ui/style/: tailwind.css
