[package]
name = "turtles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", features = ["ws"] }
axum-extra = { git = "https://github.com/tokio-rs/axum.git", features = ["typed-header"] }
axum-macros = { git = "https://github.com/tokio-rs/axum.git" }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.2", features = ["postgres", "macros", "runtime-tokio-rustls"] }
ordered-float = "4.1.1"
models = { path = "./models" }
